# plenClaw

./: .dockerignore  .env.example  .gitignore  2026-04-02-145241-a.txt  CLAUDE.md  Dockerfile  Makefile  README.md  config.json  docker-compose.yml  pyproject.toml  pyrightconfig.json
.claude/: settings.json
0a/2031ef68be/: metadata.json
0a/2031ef68be/0/: content_hash.txt  full.jsonl  metadata.json
0a/2031ef68be/1/: context.md  (+2 more)
31/3187f4cb99/: metadata.json
44/5cafecacb1/: metadata.json
56/03dfab3715/: metadata.json
5e/8af2485a79/: metadata.json
65/8881d42ff1/: metadata.json
75/fd9ce0969d/: metadata.json
9f/52c73babe7/: metadata.json
ac/2fa448656d/: metadata.json
bb/2ceafc3d5c/: metadata.json
be/f06c8e24fd/: metadata.json
dc/73e660fa45/: metadata.json
docker/: heartclaw.Dockerfile  tiangong.Dockerfile
docker/env/: tiangong.env
docs/: gen_university.py  system_prompts_high_school.csv  system_prompts_middle_school.csv  system_prompts_university.csv
docs/Learn/: Python多线程threading笔记.md  Python异步编程asyncio笔记.md
e3/1de1f8c87f/: metadata.json
f1/2c07d3ee2e/: metadata.json
src/: main.py
src/api/: app.py
src/channels/: registry.py  types.py
src/config/: settings.py
src/docs/: architecture.md  feishu-tools-design.md  memory-design.md
src/memory/: memory_context.py  memory_store.py
src/scheduler/: memory_updater.py
src/storage/: __init__.py  base.py  config_store.py  conversation_store.py  memory_store.py  short_memory_store.py
src/tiangong/: adapters.py  engine.py  main.py
src/utils/: __init__.py  logger.py  token_counter.py
(+199 files in other folders)
