[project]
name = "pineclaw"
version = "0.1.0"
description = "Lightweight AI Agent with Feishu as collaborative space"
requires-python = ">=3.12"
dependencies = [
    "lark-oapi>=1.5.3",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "aiosqlite",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
]
