[project]
name = "pineclaw"
version = "0.1.0"
description = "Lightweight AI Agent with Feishu as collaborative space"
requires-python = ">=3.12"
dependencies = [
    "lark-oapi>=1.5.3",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "aiosqlite",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
]

[project.scripts]
cli = "core.agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
]
